--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>生年月日:</strong> <span>1996年07月13日</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://ravi2301-collab.github.io/newportfolio/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>連絡先</strong> <span>070 2402 5191</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>国籍</strong> <span>ネパール</span></li>
                 </ul>
